fix: align staking selector popups

--- a/src/ui/views/Staking/style.less
+++ b/src/ui/views/Staking/style.less
@@ -398,8 +398,8 @@ body.dark .staking-selector-popup {
 }
 
 .staking-selector-popup .ant-drawer-body {
-  height: calc(100% - 52px);
-  padding: 6px 20px 20px;
+  height: 100%;
+  padding: 20px 20px 20px;
   overflow: hidden;
 }
 
